--- a/docker/map.jinja
+++ b/docker/map.jinja
@@ -13,7 +13,7 @@
         'service': 'docker',
     },
     'Ubuntu': {
-        'pkgs': ['docker-ce', 'python3-docker'],
+        'pkgs': ['docker-ce', 'python-docker'],
         'service': 'docker',
     },
 }, grain='os', merge=salt['pillar.get']('docker:host')) %}
